@@ -73,6 +73,11 @@ getent group service >/dev/null || /usr/sbin/groupadd service
 %{_libdir}/pkgconfig/servicelog-1.pc
 
 %changelog
+* Tue Mar 15 2016 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.16
+- Fixed security issues like buffer overflow, memory allocation validation
+- Fixed sqlite bind issue
+- Fixed several build warnings
+
 * Thu Aug 14 2014 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.15
 - Cleanup build tools (configure.ac and Makefile.am)
 
