@@ -1,3 +1,8 @@
+* Tue Mar 15 2016 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.16
+- Fixed security issues like buffer overflow, memory allocation validation
+- Fixed sqlite bind issue
+- Fixed several build warnings
+
 * Thu Aug 14 2014 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.15
 - Cleanup build tools (configure.ac and Makefile.am)
 
